--- a/app/src/main/res/layout/fragment_select_page.xml
+++ b/app/src/main/res/layout/fragment_select_page.xml
@@ -39,7 +39,8 @@
             android:layout_marginBottom="8dp"
             app:layout_constraintRight_toLeftOf="@+id/button"
             android:layout_marginRight="8dp"
-            app:layout_constraintVertical_bias="1.0" />
+            app:layout_constraintVertical_bias="1.0"
+            app:layout_constraintHorizontal_bias="1.0" />
 
         <ImageView
             android:id="@+id/imageView3"
@@ -66,13 +67,32 @@
             android:layout_marginRight="8dp"
             android:layout_marginTop="8dp"
             android:max="@{selectPage.maxPageIndex}"
-            android:progress="3"
+            android:progress="@{selectPage.currentPageIndex}"
             android:onProgressChanged="@{selectPage.onProgressChanged}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.87" />
+            app:layout_constraintVertical_bias="0.82"
+            app:layout_constraintHorizontal_bias="0.0" />
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="40dp"
+            android:layout_height="25dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginTop="8dp"
+            android:background="@color/colorPrimary"
+            android:gravity="center_horizontal|center"
+            android:text="@{Integer.toString(selectPage.currentPageIndex)}"
+            android:textColor="@android:color/white"
+            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/seekBar"
+            app:layout_constraintVertical_bias="0.0" />
 
     </android.support.constraint.ConstraintLayout>
 </layout>
