Implement button behavior of page select fragment

--- a/app/src/main/res/layout/fragment_select_page.xml
+++ b/app/src/main/res/layout/fragment_select_page.xml
@@ -19,6 +19,7 @@
             android:layout_height="wrap_content"
             android:text="Button"
             android:layout_marginRight="16dp"
+            android:onClick="@{selectPage.select}"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginBottom="8dp"
@@ -31,6 +32,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="hoge"
+            android:onClick="@{selectPage.cancel}"
             android:layout_marginLeft="8dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
