--- a/app/src/main/res/layout/fragment_select_page.xml
+++ b/app/src/main/res/layout/fragment_select_page.xml
@@ -58,7 +58,7 @@
             android:layout_marginTop="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginBottom="8dp"
-            bind:loadImageFile="@{selectPage.currentPageFile}"/>
+            bind:loadSelectedImageFile="@{selectPage.currentPageFile}"/>
 
         <SeekBar
             android:id="@+id/seekBar"
