Modify button texts

--- a/app/src/main/res/layout/fragment_select_page.xml
+++ b/app/src/main/res/layout/fragment_select_page.xml
@@ -17,7 +17,7 @@
             android:id="@+id/button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Button"
+            android:text="Select"
             android:layout_marginRight="16dp"
             android:onClick="@{selectPage.select}"
             app:layout_constraintRight_toRightOf="parent"
@@ -31,7 +31,7 @@
             android:id="@+id/button2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="hoge"
+            android:text="Cancel"
             android:onClick="@{selectPage.cancel}"
             android:layout_marginLeft="8dp"
             app:layout_constraintLeft_toLeftOf="parent"
