Fix bug that ComicViewModel is always back to initial state when showing ComicViewFragment

--- a/app/src/main/res/layout/fragment_view_comic.xml
+++ b/app/src/main/res/layout/fragment_view_comic.xml
@@ -38,7 +38,7 @@
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                android:onClick="@{body::onClick}"
+                android:onClick="@{body.onClick}"
                 bind:loadImageFile="@{body.mainImageFile}" />
         </android.support.constraint.ConstraintLayout>
 
