--- a/app/src/main/res/layout/fragment_view_comic.xml
+++ b/app/src/main/res/layout/fragment_view_comic.xml
@@ -26,7 +26,7 @@
             android:layout_marginRight="0dp"
             android:layout_marginTop="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="@+id/imageView2"
+            app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toLeftOf="@+id/guideline3"
             app:layout_constraintTop_toTopOf="parent"
             android:onClick="@{body.clickLeftSide}" />
@@ -41,10 +41,9 @@
             android:layout_marginTop="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="@+id/guideline3"
-            app:layout_constraintRight_toRightOf="@+id/imageView2"
+            app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:onClick="@{body.clickRightSide}" />
-
 
         <ImageView
             android:id="@+id/imageView2"
@@ -57,8 +56,7 @@
             app:layout_constraintTop_toTopOf="parent"
             bind:loadImageFile="@{body.mainImageFile}"
             android:layout_marginTop="0dp"
-            android:layout_marginLeft="0dp"
-            app:layout_constraintHorizontal_bias="0.5" />
+            android:layout_marginLeft="0dp" />
 
         <android.support.constraint.Guideline
             android:layout_width="wrap_content"
