--- a/app/src/main/res/layout/fragment_view_comic.xml
+++ b/app/src/main/res/layout/fragment_view_comic.xml
@@ -48,14 +48,13 @@
             android:id="@+id/imageView2"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:scaleType="matrix"
+            android:layout_marginLeft="0dp"
+            android:layout_marginTop="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            bind:loadImageFile="@{body.mainImageFile}"
-            android:layout_marginTop="0dp"
-            android:layout_marginLeft="0dp" />
+            bind:loadImageFile="@{body.mainImageFile}" />
 
         <android.support.constraint.Guideline
             android:layout_width="wrap_content"
