--- a/app/src/main/res/layout/fragment_select_page.xml
+++ b/app/src/main/res/layout/fragment_select_page.xml
@@ -70,6 +70,7 @@
             android:max="@{selectPage.maxPageIndex}"
             android:progress="@{selectPage.currentPageIndex}"
             android:onProgressChanged="@{selectPage.onProgressChanged}"
+            android:rotation="180"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
