Click to select page when seeking

--- a/app/src/main/res/layout/fragment_select_page.xml
+++ b/app/src/main/res/layout/fragment_select_page.xml
@@ -57,6 +57,7 @@
             android:layout_marginTop="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginBottom="8dp"
+            android:onClick="@{selectPage.onClick}"
             bind:loadSelectedImageFile="@{selectPage.currentPageFile}"/>
 
         <SeekBar
